parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ACTIVADA
    AIRE
    ALARMA
    ALTAVOZ
    AND
    CERRADURA
    DISCRETO
    EMAIL
    EMAIL_NOTIF
    FECHA
    HORA
    MENSAJE
    MODO
    MUTE
    NOT
    OR
    PERSIANA
    POSICION
    RELOJ
    TEMP_ACT
    TEMP_OBJ
    TEXTO
    TIME
    VOLUMEN

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_instrucciones
Rule 2     lista_instrucciones -> instruccion
Rule 3     lista_instrucciones -> instruccion lista_instrucciones
Rule 4     instruccion -> bloque_when
Rule 5     instruccion -> bloque_every
Rule 6     instruccion -> bloque_if
Rule 7     instruccion -> asignacion
Rule 8     bloque_when -> WHEN condicion DO lista_acciones END
Rule 9     bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones END
Rule 10    bloque_if -> IF condicion THEN lista_acciones END
Rule 11    bloque_every -> EVERY TIEMPO DO lista_acciones END
Rule 12    lista_acciones -> accion
Rule 13    lista_acciones -> accion lista_acciones
Rule 14    accion -> asignacion
Rule 15    asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL
Rule 16    asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT
Rule 17    asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE
Rule 18    condicion -> comp_sensor
Rule 19    comp_sensor -> SENSOR_TEMP comparacion TEMP
Rule 20    comp_sensor -> SENSOR_HUMEDAD comparacion PERCENT
Rule 21    comp_sensor -> SENSOR_LUZ comparacion LUX
Rule 22    comp_sensor -> SENSOR_MOVIMIENTO comparacion BOOL
Rule 23    comp_sensor -> SENSOR_HUMO comparacion BOOL
Rule 24    comparacion -> IGUAL
Rule 25    comparacion -> NOIGUAL
Rule 26    comparacion -> MAYOR
Rule 27    comparacion -> MENOR
Rule 28    comparacion -> MAYORIGUAL
Rule 29    comparacion -> MENORIGUAL

Terminals, with rules where they appear

ACTIVADA             : 
AIRE                 : 
ALARMA               : 
ALTAVOZ              : 
AND                  : 
ASIGNACION           : 15 16 17
BOOL                 : 15 22 23
BRILLO               : 16
CERRADURA            : 
COLOR                : 17
DISCRETO             : 
DO                   : 8 11
ELSE                 : 9
EMAIL                : 
EMAIL_NOTIF          : 
END                  : 8 9 10 11
ESTADO               : 15
EVERY                : 11
FECHA                : 
FOCO                 : 15 16 17
HORA                 : 
IF                   : 9 10
IGUAL                : 24
LUX                  : 21
MAYOR                : 26
MAYORIGUAL           : 28
MENOR                : 27
MENORIGUAL           : 29
MENSAJE              : 
MODO                 : 
MUTE                 : 
NOIGUAL              : 25
NOMBRE               : 17
NOT                  : 
OR                   : 
PERCENT              : 16 20
PERSIANA             : 
POSICION             : 
PUNTO                : 15 16 17
RELOJ                : 
SENSOR_HUMEDAD       : 20
SENSOR_HUMO          : 23
SENSOR_LUZ           : 21
SENSOR_MOVIMIENTO    : 22
SENSOR_TEMP          : 19
TEMP                 : 19
TEMP_ACT             : 
TEMP_OBJ             : 
TEXTO                : 
THEN                 : 9 10
TIEMPO               : 11
TIME                 : 
VOLUMEN              : 
WHEN                 : 8
error                : 

Nonterminals, with rules where they appear

accion               : 12 13
asignacion           : 7 14
bloque_every         : 5
bloque_if            : 6
bloque_when          : 4
comp_sensor          : 18
comparacion          : 19 20 21 22 23
condicion            : 8 9 10
instruccion          : 2 3
lista_acciones       : 8 9 9 10 11 13
lista_instrucciones  : 1 3
programa             : 0

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_instrucciones
    (2) lista_instrucciones -> . instruccion
    (3) lista_instrucciones -> . instruccion lista_instrucciones
    (4) instruccion -> . bloque_when
    (5) instruccion -> . bloque_every
    (6) instruccion -> . bloque_if
    (7) instruccion -> . asignacion
    (8) bloque_when -> . WHEN condicion DO lista_acciones END
    (11) bloque_every -> . EVERY TIEMPO DO lista_acciones END
    (9) bloque_if -> . IF condicion THEN lista_acciones ELSE lista_acciones END
    (10) bloque_if -> . IF condicion THEN lista_acciones END
    (15) asignacion -> . FOCO PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> . FOCO PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> . FOCO PUNTO COLOR ASIGNACION NOMBRE

    WHEN            shift and go to state 8
    EVERY           shift and go to state 9
    IF              shift and go to state 10
    FOCO            shift and go to state 11

    programa                       shift and go to state 1
    lista_instrucciones            shift and go to state 2
    instruccion                    shift and go to state 3
    bloque_when                    shift and go to state 4
    bloque_every                   shift and go to state 5
    bloque_if                      shift and go to state 6
    asignacion                     shift and go to state 7

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_instrucciones .

    $end            reduce using rule 1 (programa -> lista_instrucciones .)


state 3

    (2) lista_instrucciones -> instruccion .
    (3) lista_instrucciones -> instruccion . lista_instrucciones
    (2) lista_instrucciones -> . instruccion
    (3) lista_instrucciones -> . instruccion lista_instrucciones
    (4) instruccion -> . bloque_when
    (5) instruccion -> . bloque_every
    (6) instruccion -> . bloque_if
    (7) instruccion -> . asignacion
    (8) bloque_when -> . WHEN condicion DO lista_acciones END
    (11) bloque_every -> . EVERY TIEMPO DO lista_acciones END
    (9) bloque_if -> . IF condicion THEN lista_acciones ELSE lista_acciones END
    (10) bloque_if -> . IF condicion THEN lista_acciones END
    (15) asignacion -> . FOCO PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> . FOCO PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> . FOCO PUNTO COLOR ASIGNACION NOMBRE

    $end            reduce using rule 2 (lista_instrucciones -> instruccion .)
    WHEN            shift and go to state 8
    EVERY           shift and go to state 9
    IF              shift and go to state 10
    FOCO            shift and go to state 11

    instruccion                    shift and go to state 3
    lista_instrucciones            shift and go to state 12
    bloque_when                    shift and go to state 4
    bloque_every                   shift and go to state 5
    bloque_if                      shift and go to state 6
    asignacion                     shift and go to state 7

state 4

    (4) instruccion -> bloque_when .

    WHEN            reduce using rule 4 (instruccion -> bloque_when .)
    EVERY           reduce using rule 4 (instruccion -> bloque_when .)
    IF              reduce using rule 4 (instruccion -> bloque_when .)
    FOCO            reduce using rule 4 (instruccion -> bloque_when .)
    $end            reduce using rule 4 (instruccion -> bloque_when .)


state 5

    (5) instruccion -> bloque_every .

    WHEN            reduce using rule 5 (instruccion -> bloque_every .)
    EVERY           reduce using rule 5 (instruccion -> bloque_every .)
    IF              reduce using rule 5 (instruccion -> bloque_every .)
    FOCO            reduce using rule 5 (instruccion -> bloque_every .)
    $end            reduce using rule 5 (instruccion -> bloque_every .)


state 6

    (6) instruccion -> bloque_if .

    WHEN            reduce using rule 6 (instruccion -> bloque_if .)
    EVERY           reduce using rule 6 (instruccion -> bloque_if .)
    IF              reduce using rule 6 (instruccion -> bloque_if .)
    FOCO            reduce using rule 6 (instruccion -> bloque_if .)
    $end            reduce using rule 6 (instruccion -> bloque_if .)


state 7

    (7) instruccion -> asignacion .

    WHEN            reduce using rule 7 (instruccion -> asignacion .)
    EVERY           reduce using rule 7 (instruccion -> asignacion .)
    IF              reduce using rule 7 (instruccion -> asignacion .)
    FOCO            reduce using rule 7 (instruccion -> asignacion .)
    $end            reduce using rule 7 (instruccion -> asignacion .)


state 8

    (8) bloque_when -> WHEN . condicion DO lista_acciones END
    (18) condicion -> . comp_sensor
    (19) comp_sensor -> . SENSOR_TEMP comparacion TEMP
    (20) comp_sensor -> . SENSOR_HUMEDAD comparacion PERCENT
    (21) comp_sensor -> . SENSOR_LUZ comparacion LUX
    (22) comp_sensor -> . SENSOR_MOVIMIENTO comparacion BOOL
    (23) comp_sensor -> . SENSOR_HUMO comparacion BOOL

    SENSOR_TEMP     shift and go to state 15
    SENSOR_HUMEDAD  shift and go to state 16
    SENSOR_LUZ      shift and go to state 17
    SENSOR_MOVIMIENTO shift and go to state 18
    SENSOR_HUMO     shift and go to state 19

    condicion                      shift and go to state 13
    comp_sensor                    shift and go to state 14

state 9

    (11) bloque_every -> EVERY . TIEMPO DO lista_acciones END

    TIEMPO          shift and go to state 20


state 10

    (9) bloque_if -> IF . condicion THEN lista_acciones ELSE lista_acciones END
    (10) bloque_if -> IF . condicion THEN lista_acciones END
    (18) condicion -> . comp_sensor
    (19) comp_sensor -> . SENSOR_TEMP comparacion TEMP
    (20) comp_sensor -> . SENSOR_HUMEDAD comparacion PERCENT
    (21) comp_sensor -> . SENSOR_LUZ comparacion LUX
    (22) comp_sensor -> . SENSOR_MOVIMIENTO comparacion BOOL
    (23) comp_sensor -> . SENSOR_HUMO comparacion BOOL

    SENSOR_TEMP     shift and go to state 15
    SENSOR_HUMEDAD  shift and go to state 16
    SENSOR_LUZ      shift and go to state 17
    SENSOR_MOVIMIENTO shift and go to state 18
    SENSOR_HUMO     shift and go to state 19

    condicion                      shift and go to state 21
    comp_sensor                    shift and go to state 14

state 11

    (15) asignacion -> FOCO . PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> FOCO . PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> FOCO . PUNTO COLOR ASIGNACION NOMBRE

    PUNTO           shift and go to state 22


state 12

    (3) lista_instrucciones -> instruccion lista_instrucciones .

    $end            reduce using rule 3 (lista_instrucciones -> instruccion lista_instrucciones .)


state 13

    (8) bloque_when -> WHEN condicion . DO lista_acciones END

    DO              shift and go to state 23


state 14

    (18) condicion -> comp_sensor .

    DO              reduce using rule 18 (condicion -> comp_sensor .)
    THEN            reduce using rule 18 (condicion -> comp_sensor .)


state 15

    (19) comp_sensor -> SENSOR_TEMP . comparacion TEMP
    (24) comparacion -> . IGUAL
    (25) comparacion -> . NOIGUAL
    (26) comparacion -> . MAYOR
    (27) comparacion -> . MENOR
    (28) comparacion -> . MAYORIGUAL
    (29) comparacion -> . MENORIGUAL

    IGUAL           shift and go to state 25
    NOIGUAL         shift and go to state 26
    MAYOR           shift and go to state 27
    MENOR           shift and go to state 28
    MAYORIGUAL      shift and go to state 29
    MENORIGUAL      shift and go to state 30

    comparacion                    shift and go to state 24

state 16

    (20) comp_sensor -> SENSOR_HUMEDAD . comparacion PERCENT
    (24) comparacion -> . IGUAL
    (25) comparacion -> . NOIGUAL
    (26) comparacion -> . MAYOR
    (27) comparacion -> . MENOR
    (28) comparacion -> . MAYORIGUAL
    (29) comparacion -> . MENORIGUAL

    IGUAL           shift and go to state 25
    NOIGUAL         shift and go to state 26
    MAYOR           shift and go to state 27
    MENOR           shift and go to state 28
    MAYORIGUAL      shift and go to state 29
    MENORIGUAL      shift and go to state 30

    comparacion                    shift and go to state 31

state 17

    (21) comp_sensor -> SENSOR_LUZ . comparacion LUX
    (24) comparacion -> . IGUAL
    (25) comparacion -> . NOIGUAL
    (26) comparacion -> . MAYOR
    (27) comparacion -> . MENOR
    (28) comparacion -> . MAYORIGUAL
    (29) comparacion -> . MENORIGUAL

    IGUAL           shift and go to state 25
    NOIGUAL         shift and go to state 26
    MAYOR           shift and go to state 27
    MENOR           shift and go to state 28
    MAYORIGUAL      shift and go to state 29
    MENORIGUAL      shift and go to state 30

    comparacion                    shift and go to state 32

state 18

    (22) comp_sensor -> SENSOR_MOVIMIENTO . comparacion BOOL
    (24) comparacion -> . IGUAL
    (25) comparacion -> . NOIGUAL
    (26) comparacion -> . MAYOR
    (27) comparacion -> . MENOR
    (28) comparacion -> . MAYORIGUAL
    (29) comparacion -> . MENORIGUAL

    IGUAL           shift and go to state 25
    NOIGUAL         shift and go to state 26
    MAYOR           shift and go to state 27
    MENOR           shift and go to state 28
    MAYORIGUAL      shift and go to state 29
    MENORIGUAL      shift and go to state 30

    comparacion                    shift and go to state 33

state 19

    (23) comp_sensor -> SENSOR_HUMO . comparacion BOOL
    (24) comparacion -> . IGUAL
    (25) comparacion -> . NOIGUAL
    (26) comparacion -> . MAYOR
    (27) comparacion -> . MENOR
    (28) comparacion -> . MAYORIGUAL
    (29) comparacion -> . MENORIGUAL

    IGUAL           shift and go to state 25
    NOIGUAL         shift and go to state 26
    MAYOR           shift and go to state 27
    MENOR           shift and go to state 28
    MAYORIGUAL      shift and go to state 29
    MENORIGUAL      shift and go to state 30

    comparacion                    shift and go to state 34

state 20

    (11) bloque_every -> EVERY TIEMPO . DO lista_acciones END

    DO              shift and go to state 35


state 21

    (9) bloque_if -> IF condicion . THEN lista_acciones ELSE lista_acciones END
    (10) bloque_if -> IF condicion . THEN lista_acciones END

    THEN            shift and go to state 36


state 22

    (15) asignacion -> FOCO PUNTO . ESTADO ASIGNACION BOOL
    (16) asignacion -> FOCO PUNTO . BRILLO ASIGNACION PERCENT
    (17) asignacion -> FOCO PUNTO . COLOR ASIGNACION NOMBRE

    ESTADO          shift and go to state 37
    BRILLO          shift and go to state 38
    COLOR           shift and go to state 39


state 23

    (8) bloque_when -> WHEN condicion DO . lista_acciones END
    (12) lista_acciones -> . accion
    (13) lista_acciones -> . accion lista_acciones
    (14) accion -> . asignacion
    (15) asignacion -> . FOCO PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> . FOCO PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> . FOCO PUNTO COLOR ASIGNACION NOMBRE

    FOCO            shift and go to state 11

    lista_acciones                 shift and go to state 40
    accion                         shift and go to state 41
    asignacion                     shift and go to state 42

state 24

    (19) comp_sensor -> SENSOR_TEMP comparacion . TEMP

    TEMP            shift and go to state 43


state 25

    (24) comparacion -> IGUAL .

    TEMP            reduce using rule 24 (comparacion -> IGUAL .)
    PERCENT         reduce using rule 24 (comparacion -> IGUAL .)
    LUX             reduce using rule 24 (comparacion -> IGUAL .)
    BOOL            reduce using rule 24 (comparacion -> IGUAL .)


state 26

    (25) comparacion -> NOIGUAL .

    TEMP            reduce using rule 25 (comparacion -> NOIGUAL .)
    PERCENT         reduce using rule 25 (comparacion -> NOIGUAL .)
    LUX             reduce using rule 25 (comparacion -> NOIGUAL .)
    BOOL            reduce using rule 25 (comparacion -> NOIGUAL .)


state 27

    (26) comparacion -> MAYOR .

    TEMP            reduce using rule 26 (comparacion -> MAYOR .)
    PERCENT         reduce using rule 26 (comparacion -> MAYOR .)
    LUX             reduce using rule 26 (comparacion -> MAYOR .)
    BOOL            reduce using rule 26 (comparacion -> MAYOR .)


state 28

    (27) comparacion -> MENOR .

    TEMP            reduce using rule 27 (comparacion -> MENOR .)
    PERCENT         reduce using rule 27 (comparacion -> MENOR .)
    LUX             reduce using rule 27 (comparacion -> MENOR .)
    BOOL            reduce using rule 27 (comparacion -> MENOR .)


state 29

    (28) comparacion -> MAYORIGUAL .

    TEMP            reduce using rule 28 (comparacion -> MAYORIGUAL .)
    PERCENT         reduce using rule 28 (comparacion -> MAYORIGUAL .)
    LUX             reduce using rule 28 (comparacion -> MAYORIGUAL .)
    BOOL            reduce using rule 28 (comparacion -> MAYORIGUAL .)


state 30

    (29) comparacion -> MENORIGUAL .

    TEMP            reduce using rule 29 (comparacion -> MENORIGUAL .)
    PERCENT         reduce using rule 29 (comparacion -> MENORIGUAL .)
    LUX             reduce using rule 29 (comparacion -> MENORIGUAL .)
    BOOL            reduce using rule 29 (comparacion -> MENORIGUAL .)


state 31

    (20) comp_sensor -> SENSOR_HUMEDAD comparacion . PERCENT

    PERCENT         shift and go to state 44


state 32

    (21) comp_sensor -> SENSOR_LUZ comparacion . LUX

    LUX             shift and go to state 45


state 33

    (22) comp_sensor -> SENSOR_MOVIMIENTO comparacion . BOOL

    BOOL            shift and go to state 46


state 34

    (23) comp_sensor -> SENSOR_HUMO comparacion . BOOL

    BOOL            shift and go to state 47


state 35

    (11) bloque_every -> EVERY TIEMPO DO . lista_acciones END
    (12) lista_acciones -> . accion
    (13) lista_acciones -> . accion lista_acciones
    (14) accion -> . asignacion
    (15) asignacion -> . FOCO PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> . FOCO PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> . FOCO PUNTO COLOR ASIGNACION NOMBRE

    FOCO            shift and go to state 11

    lista_acciones                 shift and go to state 48
    accion                         shift and go to state 41
    asignacion                     shift and go to state 42

state 36

    (9) bloque_if -> IF condicion THEN . lista_acciones ELSE lista_acciones END
    (10) bloque_if -> IF condicion THEN . lista_acciones END
    (12) lista_acciones -> . accion
    (13) lista_acciones -> . accion lista_acciones
    (14) accion -> . asignacion
    (15) asignacion -> . FOCO PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> . FOCO PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> . FOCO PUNTO COLOR ASIGNACION NOMBRE

    FOCO            shift and go to state 11

    lista_acciones                 shift and go to state 49
    accion                         shift and go to state 41
    asignacion                     shift and go to state 42

state 37

    (15) asignacion -> FOCO PUNTO ESTADO . ASIGNACION BOOL

    ASIGNACION      shift and go to state 50


state 38

    (16) asignacion -> FOCO PUNTO BRILLO . ASIGNACION PERCENT

    ASIGNACION      shift and go to state 51


state 39

    (17) asignacion -> FOCO PUNTO COLOR . ASIGNACION NOMBRE

    ASIGNACION      shift and go to state 52


state 40

    (8) bloque_when -> WHEN condicion DO lista_acciones . END

    END             shift and go to state 53


state 41

    (12) lista_acciones -> accion .
    (13) lista_acciones -> accion . lista_acciones
    (12) lista_acciones -> . accion
    (13) lista_acciones -> . accion lista_acciones
    (14) accion -> . asignacion
    (15) asignacion -> . FOCO PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> . FOCO PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> . FOCO PUNTO COLOR ASIGNACION NOMBRE

    END             reduce using rule 12 (lista_acciones -> accion .)
    ELSE            reduce using rule 12 (lista_acciones -> accion .)
    FOCO            shift and go to state 11

    accion                         shift and go to state 41
    lista_acciones                 shift and go to state 54
    asignacion                     shift and go to state 42

state 42

    (14) accion -> asignacion .

    FOCO            reduce using rule 14 (accion -> asignacion .)
    END             reduce using rule 14 (accion -> asignacion .)
    ELSE            reduce using rule 14 (accion -> asignacion .)


state 43

    (19) comp_sensor -> SENSOR_TEMP comparacion TEMP .

    DO              reduce using rule 19 (comp_sensor -> SENSOR_TEMP comparacion TEMP .)
    THEN            reduce using rule 19 (comp_sensor -> SENSOR_TEMP comparacion TEMP .)


state 44

    (20) comp_sensor -> SENSOR_HUMEDAD comparacion PERCENT .

    DO              reduce using rule 20 (comp_sensor -> SENSOR_HUMEDAD comparacion PERCENT .)
    THEN            reduce using rule 20 (comp_sensor -> SENSOR_HUMEDAD comparacion PERCENT .)


state 45

    (21) comp_sensor -> SENSOR_LUZ comparacion LUX .

    DO              reduce using rule 21 (comp_sensor -> SENSOR_LUZ comparacion LUX .)
    THEN            reduce using rule 21 (comp_sensor -> SENSOR_LUZ comparacion LUX .)


state 46

    (22) comp_sensor -> SENSOR_MOVIMIENTO comparacion BOOL .

    DO              reduce using rule 22 (comp_sensor -> SENSOR_MOVIMIENTO comparacion BOOL .)
    THEN            reduce using rule 22 (comp_sensor -> SENSOR_MOVIMIENTO comparacion BOOL .)


state 47

    (23) comp_sensor -> SENSOR_HUMO comparacion BOOL .

    DO              reduce using rule 23 (comp_sensor -> SENSOR_HUMO comparacion BOOL .)
    THEN            reduce using rule 23 (comp_sensor -> SENSOR_HUMO comparacion BOOL .)


state 48

    (11) bloque_every -> EVERY TIEMPO DO lista_acciones . END

    END             shift and go to state 55


state 49

    (9) bloque_if -> IF condicion THEN lista_acciones . ELSE lista_acciones END
    (10) bloque_if -> IF condicion THEN lista_acciones . END

    ELSE            shift and go to state 56
    END             shift and go to state 57


state 50

    (15) asignacion -> FOCO PUNTO ESTADO ASIGNACION . BOOL

    BOOL            shift and go to state 58


state 51

    (16) asignacion -> FOCO PUNTO BRILLO ASIGNACION . PERCENT

    PERCENT         shift and go to state 59


state 52

    (17) asignacion -> FOCO PUNTO COLOR ASIGNACION . NOMBRE

    NOMBRE          shift and go to state 60


state 53

    (8) bloque_when -> WHEN condicion DO lista_acciones END .

    WHEN            reduce using rule 8 (bloque_when -> WHEN condicion DO lista_acciones END .)
    EVERY           reduce using rule 8 (bloque_when -> WHEN condicion DO lista_acciones END .)
    IF              reduce using rule 8 (bloque_when -> WHEN condicion DO lista_acciones END .)
    FOCO            reduce using rule 8 (bloque_when -> WHEN condicion DO lista_acciones END .)
    $end            reduce using rule 8 (bloque_when -> WHEN condicion DO lista_acciones END .)


state 54

    (13) lista_acciones -> accion lista_acciones .

    END             reduce using rule 13 (lista_acciones -> accion lista_acciones .)
    ELSE            reduce using rule 13 (lista_acciones -> accion lista_acciones .)


state 55

    (11) bloque_every -> EVERY TIEMPO DO lista_acciones END .

    WHEN            reduce using rule 11 (bloque_every -> EVERY TIEMPO DO lista_acciones END .)
    EVERY           reduce using rule 11 (bloque_every -> EVERY TIEMPO DO lista_acciones END .)
    IF              reduce using rule 11 (bloque_every -> EVERY TIEMPO DO lista_acciones END .)
    FOCO            reduce using rule 11 (bloque_every -> EVERY TIEMPO DO lista_acciones END .)
    $end            reduce using rule 11 (bloque_every -> EVERY TIEMPO DO lista_acciones END .)


state 56

    (9) bloque_if -> IF condicion THEN lista_acciones ELSE . lista_acciones END
    (12) lista_acciones -> . accion
    (13) lista_acciones -> . accion lista_acciones
    (14) accion -> . asignacion
    (15) asignacion -> . FOCO PUNTO ESTADO ASIGNACION BOOL
    (16) asignacion -> . FOCO PUNTO BRILLO ASIGNACION PERCENT
    (17) asignacion -> . FOCO PUNTO COLOR ASIGNACION NOMBRE

    FOCO            shift and go to state 11

    lista_acciones                 shift and go to state 61
    accion                         shift and go to state 41
    asignacion                     shift and go to state 42

state 57

    (10) bloque_if -> IF condicion THEN lista_acciones END .

    WHEN            reduce using rule 10 (bloque_if -> IF condicion THEN lista_acciones END .)
    EVERY           reduce using rule 10 (bloque_if -> IF condicion THEN lista_acciones END .)
    IF              reduce using rule 10 (bloque_if -> IF condicion THEN lista_acciones END .)
    FOCO            reduce using rule 10 (bloque_if -> IF condicion THEN lista_acciones END .)
    $end            reduce using rule 10 (bloque_if -> IF condicion THEN lista_acciones END .)


state 58

    (15) asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .

    WHEN            reduce using rule 15 (asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .)
    EVERY           reduce using rule 15 (asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .)
    IF              reduce using rule 15 (asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .)
    FOCO            reduce using rule 15 (asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .)
    $end            reduce using rule 15 (asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .)
    END             reduce using rule 15 (asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .)
    ELSE            reduce using rule 15 (asignacion -> FOCO PUNTO ESTADO ASIGNACION BOOL .)


state 59

    (16) asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .

    WHEN            reduce using rule 16 (asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .)
    EVERY           reduce using rule 16 (asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .)
    IF              reduce using rule 16 (asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .)
    FOCO            reduce using rule 16 (asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .)
    $end            reduce using rule 16 (asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .)
    END             reduce using rule 16 (asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .)
    ELSE            reduce using rule 16 (asignacion -> FOCO PUNTO BRILLO ASIGNACION PERCENT .)


state 60

    (17) asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .

    WHEN            reduce using rule 17 (asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .)
    EVERY           reduce using rule 17 (asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .)
    IF              reduce using rule 17 (asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .)
    FOCO            reduce using rule 17 (asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .)
    $end            reduce using rule 17 (asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .)
    END             reduce using rule 17 (asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .)
    ELSE            reduce using rule 17 (asignacion -> FOCO PUNTO COLOR ASIGNACION NOMBRE .)


state 61

    (9) bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones . END

    END             shift and go to state 62


state 62

    (9) bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones END .

    WHEN            reduce using rule 9 (bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones END .)
    EVERY           reduce using rule 9 (bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones END .)
    IF              reduce using rule 9 (bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones END .)
    FOCO            reduce using rule 9 (bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones END .)
    $end            reduce using rule 9 (bloque_if -> IF condicion THEN lista_acciones ELSE lista_acciones END .)

